fix: scrollbar width

--- a/src/screens/Dashboard/dashboard.css
+++ b/src/screens/Dashboard/dashboard.css
@@ -9,11 +9,11 @@
   font-family: "Manrope";
   user-select: none;
 }
-@media screen and (max-height : 599px) {
-    #dashboard-container {
-      padding-bottom: 3vh;
-      height: max-content;
-    }
+@media screen and (max-height: 599px) {
+  #dashboard-container {
+    padding-bottom: 3vh;
+    height: max-content;
+  }
 }
 #instr-logo {
   margin-right: 30px;
@@ -22,18 +22,18 @@
   cursor: pointer;
   border-radius: 20px;
 }
-@media screen and (max-height : 705px) {
+@media screen and (max-height: 705px) {
   #instr-logo {
-    margin-top : 0.25vh;
+    margin-top: 0.25vh;
   }
 }
 #instr-logo img {
   width: 35px;
   height: 35px;
 }
-@media screen and (max-width : 450px) {
+@media screen and (max-width: 450px) {
   #instr-logo {
-    margin-top : 0.3vh;
+    margin-top: 0.3vh;
   }
   #instr-logo img {
     width: 32px;
@@ -108,6 +108,7 @@
 }
 
 ::-webkit-scrollbar {
+  width: 7px;
   height: 7px;
   -webkit-appearance: none;
   background-color: #2f2f2f;
